[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-json-parser"
version = "0.0.1"
requires-python = ">= 3.11"
authors =[
    {name = "Aaron Elmquist"},
]
description = "python based json parser"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest",
]
